# ravynos

./: .cirrus.yml  Makefile  Makefile.inc1  version.txt
CoreServices/WindowServer/: WSInput.m
CoreServices/WindowServer/LoginWindow/: LoginBox.m  Makefile
CoreServices/WindowServer/SystemUIServer/: AboutWindow.m  Makefile
Docs/: BUILDING.md  CONTRIBUTING.md  README.IT.md  README.md
ISO/: build.sh
ISO/settings/: script.ravynOS
_FreeBSD/: .gitignore
_FreeBSD/secure/usr.sbin/sshd/: Makefile
_FreeBSD/share/mk/: src.libnames.mk
_distribution-macOS/: _PROVENANCE
_distribution-macOS/llvmCore/: CMakeLists.txt  build_llvm
_distribution-macOS/llvmCore/utils/llvm-build/: llvm-build
_distribution-macOS/llvmCore/utils/llvm-build/llvmbuild/: componentinfo.py  main.py
contrib/libcbor/doc/source/: requirements.txt
contrib/llvm-project/: _PROVENANCE
contrib/ntp/ntpd/: ntp_crypto.c
contrib/xcbuild/: CMakeLists.txt  _PROVENANCE
contrib/xcbuild/Libraries/acdriver/: CMakeLists.txt
contrib/xcbuild/Libraries/builtin/: CMakeLists.txt
contrib/xcbuild/Libraries/dependency/: CMakeLists.txt
contrib/xcbuild/Libraries/ext/: CMakeLists.txt
contrib/xcbuild/Libraries/graphics/: CMakeLists.txt
contrib/xcbuild/Libraries/libbom/: CMakeLists.txt
contrib/xcbuild/Libraries/libcar/: CMakeLists.txt
contrib/xcbuild/Libraries/libutil/: CMakeLists.txt
contrib/xcbuild/Libraries/ninja/: CMakeLists.txt
contrib/xcbuild/Libraries/pbxbuild/: CMakeLists.txt
contrib/xcbuild/Libraries/pbxbuild/Sources/: DerivedDataHash.cpp
contrib/xcbuild/Libraries/pbxbuild/Sources/Tool/: ScriptResolver.cpp
contrib/xcbuild/Libraries/pbxproj/: CMakeLists.txt
contrib/xcbuild/Libraries/pbxsetting/: CMakeLists.txt
contrib/xcbuild/Libraries/pbxspec/: CMakeLists.txt
contrib/xcbuild/Libraries/pbxspec/Sources/: Manager.cpp
contrib/xcbuild/Libraries/plist/: CMakeLists.txt
contrib/xcbuild/Libraries/process/: CMakeLists.txt
contrib/xcbuild/Libraries/xcassets/: CMakeLists.txt
contrib/xcbuild/Libraries/xcdriver/: CMakeLists.txt
contrib/xcbuild/Libraries/xcdriver/Sources/: Action.cpp  BuildAction.cpp
contrib/xcbuild/Libraries/xcexecution/: CMakeLists.txt
contrib/xcbuild/Libraries/xcformatter/: CMakeLists.txt
contrib/xcbuild/Libraries/xcscheme/: CMakeLists.txt
contrib/xcbuild/Libraries/xcsdk/: CMakeLists.txt
contrib/xcbuild/Libraries/xcworkspace/: CMakeLists.txt
contrib/xcbuild/Specifications/BuildPhase/: CMakeLists.txt
contrib/xcbuild/Specifications/BuildRules/: CMakeLists.txt
contrib/xcbuild/Specifications/BuildSystem/: CMakeLists.txt
contrib/xcbuild/Specifications/Compiler/: CMakeLists.txt
contrib/xcbuild/Specifications/FileType/: CMakeLists.txt
contrib/xcbuild/Specifications/Linker/: CMakeLists.txt
contrib/xcbuild/Specifications/Tool/: CMakeLists.txt
contrib/xcbuild/testproject/test/: main.m
contrib/xcbuild/testproject/test.xcodeproj/: project.pbxproj
contrib/xcbuild/testproject/test.xcodeproj/project.xcworkspace/xcuserdata/andrewhyatt.xcuserdatad/: UserInterfaceState.xcuserstate
etc/: zprofile
lib/: Makefile
lib/libsys/: libsys.h
secure/: ssh.mk
secure/lib/libssh/: Makefile
share/mk/: src.libnames.mk  sys.mk
tools/: build.sh
tools/ravynOS/: build.sh
usr.bin/python/Doc/: requirements.txt
usr.bin/su/: Makefile
